--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,1 +1,27 @@
-//index.html
+{% load static %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <title>basic-chat-app</title>
+  </head>
+<body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1"><span class="badge bg-dark">Hello World</span> Lets Chat!</span>
+            </div>
+        </nav>
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-lg-6 col-md-8 col-12">
+                <a class="btn btn-primary mt-4 h1" href="/chat/chatroom/">Default ChatRoom</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
